# SourceAlignRec

./: .gitignore  Caddyfile  README.md  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  Dockerfile  model-pool.yaml  pyproject.toml
backend/src/sourcealignrec/admin/: grant_admin.py
backend/src/sourcealignrec/api/: _offering_view.py  _review_view.py  _schemas.py  _security.py  main.py  mcp_server.py
backend/src/sourcealignrec/api/routers/: admin.py  auth.py  courses.py  history.py  offerings.py  professors.py  recommend.py  reviews.py  search.py  timetables.py  wishlist.py
backend/src/sourcealignrec/core/: config.py  embedder.py  model_pool.py  reranker.py
backend/src/sourcealignrec/db/: models.py  session.py
backend/src/sourcealignrec/offline/: candidates.py
backend/src/sourcealignrec/offline/classifier/: classify_reviews.py  dump_type_candidates.py  eval_llm.py  import_type_labels.py  label_reviews.py  review_classifier.py  split_type_labels.py  train_bert.py  train_setfit.py
backend/src/sourcealignrec/offline/eval/: eval_attr_extractor.py
backend/src/sourcealignrec/offline/extractor/: attribute_extractor.py  dump_attr_candidates.py  extract_attributes.py  import_attr_labels.py  train_attr_extractor.py
backend/src/sourcealignrec/offline/ingestion/: backfill_meta.py  ingest.py  ingest_departments.py  syllabus_parser.py  time_place_parser.py
backend/src/sourcealignrec/offline/profiler/: build_offering_profiles.py  build_professor_profiles.py  build_search_embeddings.py
backend/src/sourcealignrec/offline/selector/: embed_reviews.py  select_professor_reviews.py  select_reviews.py
backend/src/sourcealignrec/online/: dept_lens.py  filter.py
backend/src/sourcealignrec/online/mcp/: __init__.py  tools.py
backend/src/sourcealignrec/online/systems/: __init__.py  _common.py  system_d.py  system_e.py
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  courses.ts  history.ts  offerings.ts  professors.ts  recommend.ts  requirements.ts  reviews.ts  search.ts  timetables.ts  wishlist.ts
frontend/src/components/: AIPanel.module.css  AIPanel.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  Chip.module.css  Chip.tsx  EvaluationBar.module.css  EvaluationBar.tsx  Field.module.css  Field.tsx  FilterSidebar.module.css  FilterSidebar.tsx  Logo.tsx  ModeTabs.module.css  ModeTabs.tsx  OfferingCard.module.css  OfferingCard.tsx  OfferingDetailPanel.module.css  OfferingDetailPanel.tsx  PageHeader.module.css  PageHeader.tsx  ResultBoard.module.css  ResultBoard.tsx  ReviewModal.module.css  ReviewModal.tsx  ScheduleGrid.module.css  ScheduleGrid.tsx  ScheduleSelector.module.css  ScheduleSelector.tsx  SearchPanel.module.css  SearchPanel.tsx  SectionLabel.module.css  SectionLabel.tsx  TopBar.module.css  (+8 more)
(+33 files in other folders)
